--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   
-  <script src="/Drum Kit Starting Files/index.js"></script>
+  <script src="index.js"></script>
 </body>
 <footer>
   Made with ❤️ pure pyaar.
